# maglev

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md  compile_flags.txt  vcpkg.json
cmake/: vcpkg-toolchain.cmake
config/: model-endpoints.json
cpp/include/maglev/chat/: chat.h  chat_commands.h  chat_intent.h  chat_presenter.h  chat_repository.h
cpp/include/maglev/contracts/: agent_contracts.h  contracts.h  json_types.h  openai_contracts.h  repository_contracts.h
cpp/include/maglev/gateway/: agent_gateway.h  gateway.h  gateway_internal.h  mock_gateway.h  openai_compat_gateway.h  secure_gateway.h
cpp/include/maglev/runtime/: auth.h  config.h  execution.h  logging.h  session.h  util.h
cpp/src/app/: main.cpp
cpp/src/chat/: chat.cpp  chat_commands.cpp  chat_intent.cpp  chat_presenter.cpp  chat_repository.cpp
cpp/src/contracts/: agent_contracts.cpp  contracts.cpp  openai_contracts.cpp  repository_contracts.cpp
cpp/src/gateway/: gateway.cpp  gateway_common.cpp  mock_gateway.cpp  openai_compat_gateway.cpp  secure_gateway.cpp
cpp/src/runtime/: auth.cpp  config.cpp  execution.cpp  logging.cpp  session.cpp  util.cpp
plans/: 17-03-2026-plan-completed.md  17-03-2026-plan.md
scripts/: build-linux.sh  build-windows.cmd
src/: auth.rs  chat.rs  config.rs  contracts.rs  execution.rs  gateway.rs  main.rs  session.rs
vcpkg-triplets/: x64-linux.cmake
