[package]
name = "maglev"
version = "0.1.0"
edition = "2021"
description = "Local-first Rust CLI agent for Maglev."

[dependencies]
anyhow = "1.0"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.8", features = ["v4"] }
